# real_time_dehazing_in_ROV_systems

./: .gitignore  README.md  convert_fp16.py  convert_int8.py  convert_onnx.py  convert_uint8.py  fastAPI.py  finetune_funiegan.py  fp16_converter.py  optimize_onnx_model.py  performance_log_gpu1.csv  performance_log_gpu2.csv  processing.py  requirements.txt  test.py  test_finetuned.py  test_log_cpu2.txt  test_model.py  test_onnx_model.py  test_ort_model.py  test_test_finetuned.py  train_funiegan.py
configs/: train_euvp.yaml  train_model.yaml  train_target.yaml
logs/: finetune_funiegan.py  performance_log_finetune_2025.numbers  performance_log_finetune_block5.numbers  test_log_cpu1.txt  test_log_gpu1.txt  test_log_gpu2.txt
results/: benchmark_results.csv
rust/: Cargo.toml  README.md  shell.nix
rust/src/: main_fastAPI.rs  main_multi.rs  main_og.rs  main_resize.rs
utils/: data_utils.py
